[project]
name = "thoughtful-sort"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = []
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
